--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,17 @@
-API_ID=
-API_HASH=
+API_ID=your_id_here
+API_HASH=your_hash_here
 
-RANDOM_TURBO_TAPS=
-RANDOM_TAPS=
+RANDOM_TURBO_TAPS=[1000, 1500]
+RANDOM_TAPS=300
 
-AUTO_APPLY_TURBO=
-AUTO_APPLY_ENERGY=
+AUTO_APPLY_TURBO=True
+AUTO_APPLY_ENERGY=True
 
-AUTO_UPGRADE_DAMAGE=
-MAX_DAMAGE_LEVEL=
+AUTO_UPGRADE_DAMAGE=True
+MAX_DAMAGE_LEVEL=100000000
 
-AUTO_UPGRADE_RECHARGE=
-MAX_RECHARGE_LEVEL=
+AUTO_UPGRADE_RECHARGE=True
+MAX_RECHARGE_LEVEL=10000000000
 
 AUTO_UPGRADE_ENERGY=
 MAX_ENERGY_LEVEL=
@@ -40,4 +40,4 @@ USE_PROXY_FROM_TXT_FILE=
 
 DELAY_BETWEEN_STARTING_BOT=
 
-USE_CODES_FROM_FILE=
+USE_CODES_FROM_FILE=True
